port: migrate core, block, world and util packages to 26.2
Rewrites Yarn-form method/field names in blockstates/, util/, config/,
networking/, block/, block/blockentity/, world/, and RocksMain/RocksClient
to their 26.2 Mojang-mapping equivalents. Every rename was verified against
the unobfuscated minecraft-merged.jar via javap (or, where javap alone
couldn't settle a signature/behavior question, against Loom's decompiled
sources) rather than guessed.

Notable non-mechanical findings, all confirmed before applying:
- BlockBehaviour.Properties.copy(Block) split into ofFullCopy/ofLegacyCopy;
  used ofFullCopy (verified via decompiled source to be the strict
  superset, matching legacy single-method copy behavior).
- Random#nextBetween -> RandomSource#nextIntBetweenInclusive (inclusive
  bounds preserved, not the exclusive-bound nextInt(int,int) overload).
- World#getClosestPlayer -> Level#getNearestPlayer (EntityGetter interface;
  boolean-filter overload confirmed to exist alongside the Predicate one).
- BlockPredicateFilter.of/RarityFilter.of/InSquarePlacement.of/BiomeFilter.of
  -> forPredicate/onAverageOnceEvery/spread/biome; BlockPredicate.bothOf/
  matchingBlocks/IS_AIR -> allOf/matchesBlocks/ONLY_IN_AIR_PREDICATE;
  Holder.of -> Holder.direct.
- BiomeTags *_HAS_STRUCTURE renamed to HAS_* (HAS_IGLOO, HAS_END_CITY, etc).
- PlacementUtils WORLD_SURFACE_WG_HEIGHTMAP/MOTION_BLOCKING_HEIGHTMAP/
  BOTTOM_TO_TOP_RANGE -> HEIGHTMAP_WORLD_SURFACE/HEIGHTMAP/FULL_RANGE,
  cross-checked against the Heightmap.Types each constant wraps.
- net.fabricmc.fabric.api.itemgroup.v1.FabricItemGroup moved to
  net.fabricmc.fabric.api.creativetab.v1.FabricCreativeModeTab, now
  returning the vanilla CreativeModeTab.Builder directly.

Scoped error count (outside polymer/ and datagen/) went from 764 to 0 for
every package this task owns. RocksDataGen.java (not in this task's file
list) still has 15 errors, all rooted in the datagen/ package and Fabric
API's datagen module (FabricDataOutpu